Abstract modified with Jorge Poco observations

--- a/Abstract.tex
+++ b/Abstract.tex
@@ -7,8 +7,9 @@ Many of these techniques provide good results when they are applied to situation
 But for the case of uncontrolled environments, such as video surveillance, face recognition still presents difficulties: variation in illumination, lack of collaboration of people to recognize, among several others.
 Because of the importance it has in security and the amount of existing infrastructure, it is necessary to apply face recognition to video surveillance.
 
-To address the above-mentioned problems, a face-recognition pipeline is proposed using \ac{EBGM} with \ac{CLNF} as a replacement for the point detection function of the original algorithm to finally be applied in video.
-In this thesis, a parametric analysis of \ac{EBGM} was performed to find the most influential factor in its performance along with its comparison with other methods of face recognition. It was also determined elements that are part of the pipeline presented as final result.
+In this thesis, we propose a face recognition pipeline using \ac{EBGM} with \ac{CLNF} as a replacement for the point detection function of the original algorithm to finally be applied in video.
 
-Finally, the proposal was tested in a database created from shots of a security camera, consisting of 24 subjects with 8 images each. The final results show an improvement of 10 \% and 6 \% in images taken in the morning and at noon respectively.
+In addition we perform a parametric analysis of \ac{EBGM} to find the most influential factor in its performance along with its comparison with other methods of face recognition. we also determinate the elements that are part of the pipeline presented as final result.
+
+Finally, we tested the proposal in a database we created from a security camera, consisting of 24 subjects with 8 images each. The final results show an improvement in images taken in the morning and at noon respectively.
 \end{abstract}
