--- a/Resumen.tex
+++ b/Resumen.tex
@@ -11,10 +11,10 @@ Debido a la importancia que tiene en seguridad y a la cantidad de infraestructur
 
 %Para afrontar este problema este trabajo de tesis propone el un ``\textit{pipeline}'' de reconocimiento de rostros donde se usa una modificación de \ac{EBGM} usando \ac{CLNF} como reemplazo a la función de detección de puntos del algoritmo original, para finalmente ser probado en vídeos de cámaras de seguridad. 
 
-Para afrontar los problemas mencionados, se propone un \textit{pipeline} de reconocimiento de rostros usando \ac{EBGM} con \ac{CLNF} como reemplazo a la función de detección de puntos del algoritmo original, para finalmente ser aplicado en vídeo. 
-En este trabajo de tesis se realizó un análisis paramétrico de \ac{EBGM} para encontrar el factor mas influyente en su rendimiento, junto con su comparación con otros métodos de reconocimiento de rostros. También se determinó que elementos forman parte del \textit{pipeline} presentado como resultado final.
+Para afrontar los problemas mencionados, proponemos un \textit{pipeline} de reconocimiento de rostros usando \ac{EBGM} con \ac{CLNF} como reemplazo a la función de detección de puntos del algoritmo original, para finalmente ser aplicado en vídeo. 
+Además en este trabajo de tesis se realizamos un análisis paramétrico de \ac{EBGM} para encontrar el factor mas influyente en su rendimiento, junto con su comparación con otros métodos de reconocimiento de rostros. También se determinó que elementos forman parte del \textit{pipeline} presentado como resultado final.
 
-Finalmente la propuesta fue probada en una base de datos creada a partir de tomas de una cámara de seguridad, que consta de 24 sujetos con 8 imágenes cada uno. Los resultados finales muestra una mejora de 10\% y 6\% en imágenes tomadas en la mañana y en el medio día respectivamente
+Finalmente la probamos la propuesta en una base de datos creada a partir de tomas de una cámara de seguridad, que consta de 24 sujetos con 8 imágenes cada uno. Los resultados finales muestra una mejora en imágenes tomadas en la mañana y en el medio día respectivamente.
 
 %Mientras varios métodos tratan el rostros como un todo, sin reparar las características que lo componen. Presentamos la mejora método que aborda las características no lineas a partir de puntos "fiduciales" que también pueden ser tratados como características biométricas. Este método basado en características es conocido como \ac{EBGM}.
 
