Cap 2.5 modified with Jorge Poco observations

--- a/Cap_2.5.tex
+++ b/Cap_2.5.tex
@@ -103,10 +103,10 @@ La Transformada de logaritmo asigna un rango estrecho de valores (píxeles en es
 
 \begin{equation}
 \label{f_log}
-s = c*log(1+ 256*r)
+s = c*log(1+ 256*I)
 \end{equation}
 
-Donde $r$ es la imagen de entrada, $c$ es una constante, $s$ es la imagen mejorada. Para la transformada de logaritmo se utilizo el valor de 20 para la constante $ c $. 
+Donde $I$ es la imagen de entrada, $c$ es una constante, $s$ es la imagen mejorada. Para la transformada de logaritmo se utilizo el valor de 20 para la constante $ c $. 
 
 \begin{figure}[h]
 \center
