--- a/Agradecimientos.tex
+++ b/Agradecimientos.tex
@@ -1,17 +1,17 @@
 \begin{agradecimientos}
-Deseo agradecer de manera especial al Consejo Nacional de Ciencia, Tecnología e Innovación Tecnológica (CONCYTEC) y al Fondo Nacional de Desarrollo Científico, Tecnológico e Innovación Tecnológica (FONDECYT-CIENCIACTIVA), que mediante Convenio de Gestión UCSP-FONDECYT \textnumero 011-2013, han permitido la subvención y financiamiento de mis estudios de Maestría en Ciencia de la Computación en la Universidad Católica San Pablo (UCSP).
+%Aquí deberás colocar a quien y porque agradeces. Ejemplo:
 
-% Aquí deberás colocar a quien y porque agradeces. Ejemplo:
+%En primer lugar deseo agradecer a Dios por haberme guiado a lo largo de estos x años de estudio.
 
-% En primer lugar deseo agradecer a Dios por haberme guiado a lo largo de estos cinco años de estudio.
+%%% es obligatorio agradecer al CONCYTEC si es que fue un alumno becado
+Deseo agradecer de manera especial al Consejo Nacional de Ciencia, Tecnología e Innovación Tecnológica (CONCYTEC) y al Fondo Nacional de Desarrollo Científico, Tecnológico e Innovación Tecnológica (FONDECYT-CIENCIACTIVA), que mediante Convenio de Gestión UCSP-FONDECYT N$\textordmasculine$ 011-2013, %% el número de convenio puede variar!
+han permitido la subvención y financiamiento de mis estudios de Maestría en Ciencia de la Computación en la Universidad Católica San Pablo (UCSP).
 
-% Agradezco a mis padres por el apoyo brindado para forjarme como un profesional.
+Agradezco de forma muy especial a mi orientador Dr. Juan Carlos Gutiérrez Cáceres por haberme guiado en esta tesis. 
 
-% Agradezco a la universidad, mi \textit{alma matter}, por haberme cobijado y brindado la formación que ahora me permitirá ayudar a construir una mejor sociedad.
+Deseo agradecer de forma especial al Dr. Alex Cuadros por sus consejos y por alentarme en el transcurso de mis estudios, también deseo agradecer al Dr. Jorge Poco por sus observaciones y ayuda a lo largo de la investigación de esta tesis.
 
-% Agradezco de forma muy especial a mi orientador Prof. Dr./Mag. nombre 1 por haberme guiado en esta tesis. ...
+Deseo agradecer al Sr. Alejandro Camargo por su consejos en la redacción de este documento de tesis.
 
-% Deseo agradecer de forma especial a mis docentes: nombre 1, nombre 2, nombre 3 porque fueron ejemplos que deseo seguir en mi vida profesional.
-
-% Deseo agradecer al personal administrativo de la universidad: nombre 1, nombre 2, nombre 3. Muchas gracias por la atención brindada y porque siempre estuvieron dispuestas a ayudarnos.
+Finalmente deseo agradecer al personal administrativo de la universidad: Guillermo Laures, Carlos Begazo y Katherine Ayala. Muchas gracias por la atención brindada y por su disposición para aydarme en los distintos momentos a lo largo de estos años.
 \end{agradecimientos}
