Corrected with observation in PDF

--- a/Bibliog.bib
+++ b/Bibliog.bib
@@ -951,14 +951,13 @@
     link      = {http://www.anefian.com/face_reco.htm},
 }
 
-@article{caceresmodifications,
-  title={Modifications on Illumination, Distance function and Gabor masks for Elastic Bunch Graph Matching},
-  author={Caceres, Juan Carlos Gutierrez and Chavez, Jose Rodrigo Galdos and Riveros, Elian Laura},
-  journal={CLEI Electronic Journal},
-  volume={19},
-  number={2},
+@inproceedings{caceres2016modifications,
+  title={Modifications on illumination, distance function and Gabor masks for elastic bunch graph matching},
+  author={Caceres, Juan Carlos Gutierrez and Ch{\'a}vez, Jose Rodrigo Galdos},
+  booktitle={Computer Science Society (SCCC), 2016 35th International Conference of the Chilean},
+  pages={1--5},
   year={2016},
-  publisher={Centro Latinoamericano de Estudios en Inform{\'a}tica}
+  organization={IEEE}
 }
 
 @article{parmar2014face,
