--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -32,6 +32,6 @@ A raíz de este trabajo de tesis se ha desarrollado varias propuestas para traba
 A lo largo de este trabajo de tesis se presentó los siguientes artículos:
 \begin{itemize}
 \item An Improved Face Recognition Based on Illumination Normalization Technique and Elastic Bunch Graph Matching en ICFIP 2017 International Conference on Frontiersof Image Processing (Articulo aceptado)
-\item Modifications on Illumination,Distance function and Gabor masks for Elastic Bunch Graph Matching en la 35th International Conference of the Chilean Computer Science Society (SCCC 2016) organizado con la 42th Latin American Computing Conference (CLEI 2016)\cite{caceresmodifications}.
+\item Modifications on Illumination,Distance function and Gabor masks for Elastic Bunch Graph Matching en la 35th International Conference of the Chilean Computer Science Society (SCCC 2016) organizado con la 42th Latin American Computing Conference (CLEI 2016)\cite{caceres2016modifications}.
 \end{itemize}
 
