--- a/Resumen.tex
+++ b/Resumen.tex
@@ -5,10 +5,10 @@ Muchas de esas técnicas ofrecen buenos resultados cuando se aplican a situacion
 Pero para el caso de ambientes no controlados, como lo es la vídeo vigilancia, el reconocimiento de rostros aún presenta dificultades: variación en la iluminación, falta de colaboración de las personas a reconocer, entre varios otros.
 Debido a la importancia que tiene en seguridad y a la cantidad de infraestructura existente, es necesario aplicar el reconocimiento de rostros a video vigilancia.
 
-Para afrontar los problemas mencionados, se propone un \textit{pipeline} de reconocimiento de rostros usando \ac{EBGM} con \ac{CLNF} como reemplazo a la función de detección de puntos del algoritmo original, para finalmente ser aplicado en vídeo. 
-En este trabajo de tesis se realizó un análisis paramétrico de \ac{EBGM} para encontrar el factor mas influyente en su rendimiento, junto con su comparación con otros métodos de reconocimiento de rostros. También se determinó que elementos forman parte del \textit{pipeline} presentado como resultado final.
+Para afrontar los problemas mencionados, proponemos un \textit{pipeline} de reconocimiento de rostros usando \ac{EBGM} con \ac{CLNF} como reemplazo a la función de detección de puntos del algoritmo original, para finalmente ser aplicado en vídeo. 
+Además en este trabajo de tesis se realizamos un análisis paramétrico de \ac{EBGM} para encontrar el factor mas influyente en su rendimiento, junto con su comparación con otros métodos de reconocimiento de rostros. También se determinó que elementos forman parte del \textit{pipeline} presentado como resultado final.
 
-Finalmente la propuesta fue probada en una base de datos creada a partir de tomas de una cámara de seguridad, que consta de 24 sujetos con 8 imágenes cada uno. Los resultados finales muestra una mejora de 10\% y 6\% en imágenes tomadas en la mañana y en el medio día respectivamente
+Finalmente la probamos la propuesta en una base de datos creada a partir de tomas de una cámara de seguridad, que consta de 24 sujetos con 8 imágenes cada uno. Los resultados finales muestra una mejora en imágenes tomadas en la mañana y en el medio día respectivamente.
 
 \begin{flushleft}
 \textbf{Palabras clave:} Reconocimiento de rostros, Vídeo vigilancia, Ambiente no controlado, \acf{EBGM}.
